Restructure and new notes

--- a/weekly/2023-W24.md
+++ b/weekly/2023-W24.md
@@ -20,7 +20,19 @@ tags:
 
 ## Next
 
+- NEXT: mailsync and opent neomutt
+- NEXT: singley-linked list
+- NEXT: doubly-linked-list
+- NEXT: skip list
+- NEXT: Cartesian tree
+- NEXT: Red-Black Tree
+- NEXT: Splay Tree
+- NEXT: AVL Tree
+- NEXT: KD Tree
+
+
 - NEXT: Arch-mainetance to aliases
+- NEXT: how subtitute recursive search with confirmations using nvim?
 - NEXT: Fix Simple English Wikipedia not wikipedia in simple english
 - NEXT: rg guide (cht.sh version) + hidden files
 - NEXT: fd guide (cht.sh version) + hidden files
@@ -28,6 +40,12 @@ tags:
 - NEXT: backup instances, 3 - 2 - 1 additional directories and finalize
 - NEXT: gnu pass note
 - NEXT: gnu pass negentropy
+
+## Inbox
+
+- TODO: neomutt keybindings
+- TODO: nvim delete keybinding, try to use trash or place warning
+- TODO: todo toggle and empty line
 - TODO: zerotier own domain/hostname
 - TODO: settings repository sync?
 - TODO: check book Inko Ai Takita, Liz Staley - Learn Clip Studio Paint
@@ -41,13 +59,8 @@ tags:
 - TODO: describe tasker/dnd setup
 - TODO: check if I can use gpg-agent with pam
 
-- TODO: how subtitute recursive search with confirmations using nvim?
 - TODO: Shared fonts
 - TODO: Sort dictionaries
-
-
-## Inbox
-
 - TODO: auto insert mode in git-commit window (neovim)
 - TODO: audiobooks negentropy
 
@@ -90,15 +103,6 @@ tags:
 - TODO: manga and comics note
 - TODO: tachiyomi note
 
-- TODO: singley-linked list
-- TODO: doubly-linked-list
-- TODO: skip list
-- TODO: Cartesian tree
-- TODO: Red-Black Tree
-- TODO: Splay Tree
-- TODO: AVL Tree
-- TODO: KD Tree
-
 - TODO: [My Inventions Nikola Tesla](https://archive.org/details/MyInventionsNikolaTesla/page/n29/mode/2up)
 - TODO: [Crafting Interpreters](http://craftinginterpreters.com/)
 - TODO: ldd utility
@@ -117,7 +121,6 @@ tags:
 - TODO: mpd workflow
 - TODO: You could also use w !python to run your python program (no need to save, it will pass the content as stdin, that's what w ! is for).
       That way you don't to support multiple languages in your plugin. Just instruct the users to use this Vim feature
-- TODO: "freetube-bin"
 - TODO: https://aur.archlinux.org/packages/freetube-bin#:~:text=Package%20Details%3A-,freetube%2Dbin,-0.18.0%2D1
 - TODO: https://www.youtube.com/watch?v=RoHI83C9Fyk interview
 - TODO: lua =vim.lsp.buf_get_clients() list clients
@@ -136,6 +139,7 @@ tags:
 - DONE: review aliases
 - DONE: qmk qwerty fallback (additional layer)
 - DONE: https://superuser.com/questions/178587/how-do-i-detach-a-process-from-terminal-entirely
+- KILL: "freetube-bin", browser is good enough
 - KILL: Workouts playlist in strawberry
 - KILL: setup post-commit hook for wiki
 - KILL: Find case for phone
