Tasks refactoring and complete some

--- a/weekly/2023-W24.md
+++ b/weekly/2023-W24.md
@@ -20,7 +20,8 @@ tags:
 
 ## Next
 
-- NEXT: mailsync and opent neomutt
+- NEXT: oneliner's programs optimizations -> .aliases if suitable
+
 - NEXT: singley-linked list
 - NEXT: doubly-linked-list
 - NEXT: skip list
@@ -34,15 +35,19 @@ tags:
 - NEXT: Arch-mainetance to aliases
 - NEXT: how subtitute recursive search with confirmations using nvim?
 - NEXT: Fix Simple English Wikipedia not wikipedia in simple english
+- NEXT: replace '::TODO:' with 'TODO:\ ' in all notes and disable highlighting
 - NEXT: rg guide (cht.sh version) + hidden files
 - NEXT: fd guide (cht.sh version) + hidden files
 - NEXT: neovim sudo save
 - NEXT: backup instances, 3 - 2 - 1 additional directories and finalize
 - NEXT: gnu pass note
 - NEXT: gnu pass negentropy
+- NEXT: golden dict cleanup, sort dictionaries
 
 ## Inbox
 
+- TODO: ffmpeg screen record script port from lukesmith dotfiles
+- TODO: screen recording, test sound, show saving path and the end
 - TODO: neomutt keybindings
 - TODO: nvim delete keybinding, try to use trash or place warning
 - TODO: todo toggle and empty line
@@ -60,7 +65,6 @@ tags:
 - TODO: check if I can use gpg-agent with pam
 
 - TODO: Shared fonts
-- TODO: Sort dictionaries
 - TODO: auto insert mode in git-commit window (neovim)
 - TODO: audiobooks negentropy
 
@@ -87,18 +91,15 @@ tags:
 - TODO: adguard -> dns -> zerotier hosts
 - TODO: colorscheme check: khal, glances, ncdu
 
-- TODO: screen recording, test sound, show saving path and the end
 - TODO: save full screenshot update notification - add path
 - TODO: opencv + screen + click script
-- TODO: music vidio pictures workflow
+- TODO: videos and pictures workflow
 - TODO: mouseless-workflow make more relevant
 - TODO: telekasten insert link follow grammar rules, add |title item, correct
       rename (UUID issue?)
-- TODO: level 1, level 2, level 3 tags from zotero
 
 - TODO: koreader note
 - TODO: Xodo note
-- TODO: golden dict
 - TODO: encyclopedia
 - TODO: manga and comics note
 - TODO: tachiyomi note
@@ -106,41 +107,34 @@ tags:
 - TODO: [My Inventions Nikola Tesla](https://archive.org/details/MyInventionsNikolaTesla/page/n29/mode/2up)
 - TODO: [Crafting Interpreters](http://craftinginterpreters.com/)
 - TODO: ldd utility
-- TODO: keybindings in command mode
 - TODO: openai SHAP-E
-- TODO: https://github.com/systemd/zram-generator
 - TODO: https://webuxlab.com/en/projects/vm-passthrough-parsec
 - TODO: https://docs.onlykey.io/usersguide.html
-- TODO: oneliner's programs optimizations or...
 - TODO: termux/papis/tasker/share integration
-
-
 - TODO: https://github.com/pallets/flask
-- TODO: telekasten link handler++ vim.cmd/other mix
 - TODO: deep pynev integration, no python3_host needed, need just to use pyenv
-- TODO: mpd workflow
 - TODO: You could also use w !python to run your python program (no need to save, it will pass the content as stdin, that's what w ! is for).
       That way you don't to support multiple languages in your plugin. Just instruct the users to use this Vim feature
 - TODO: https://aur.archlinux.org/packages/freetube-bin#:~:text=Package%20Details%3A-,freetube%2Dbin,-0.18.0%2D1
 - TODO: https://www.youtube.com/watch?v=RoHI83C9Fyk interview
-- TODO: lua =vim.lsp.buf_get_clients() list clients
-
-- TODO: createuser --interactive
-    CREATE USER teamname WITH ENCRYPTED PASSWORD 'password';
-    CREATE DATABASE yourdb OWNER teamname;
 
 ## Week highlights
 
 - TODO: https://github.com/justfoolingaround/animdl
-- TODO: https://zero-to-nix.com/start/install
 
 ## Done
 
+- DONE: mailsync and opent neomutt, use inbox.sh on `C-M-n` in kitty
+- DONE: telekasten link handler++ vim.cmd/other mix, I just fixed `gx`
+- DONE: https://github.com/systemd/zram-generator, added
 - DONE: review aliases
 - DONE: qmk qwerty fallback (additional layer)
 - DONE: https://superuser.com/questions/178587/how-do-i-detach-a-process-from-terminal-entirely
+- KILL: mpd workflow
+- KILL: https://zero-to-nix.com/start/install
 - KILL: "freetube-bin", browser is good enough
 - KILL: Workouts playlist in strawberry
 - KILL: setup post-commit hook for wiki
 - KILL: Find case for phone
 - KILL: check watch - 143391459
+- KILL: level 1, level 2, level 3 tags from zotero
