--- a/weekly/2023-W24.md
+++ b/weekly/2023-W24.md
@@ -31,22 +31,23 @@ tags:
 - NEXT: AVL Tree
 - NEXT: KD Tree
 
-
+- NEXT: audiobooks negentropy
+- NEXT: auto insert mode in git-commit window (neovim)
 - NEXT: Arch-mainetance to aliases
 - NEXT: how subtitute recursive search with confirmations using nvim?
 - NEXT: Fix Simple English Wikipedia not wikipedia in simple english
 - NEXT: replace '::TODO:' with 'TODO:\ ' in all notes and disable highlighting
 - NEXT: rg guide (cht.sh version) + hidden files
 - NEXT: fd guide (cht.sh version) + hidden files
-- NEXT: neovim sudo save
 - NEXT: backup instances, 3 - 2 - 1 additional directories and finalize
 - NEXT: gnu pass note
 - NEXT: gnu pass negentropy
 - NEXT: golden dict cleanup, sort dictionaries
+- NEXT: hibernate disable? test suspend
 
 ## Inbox
 
-- TODO: ffmpeg screen record script port from lukesmith dotfiles
+- TODO: setup post-commit hook for wiki, repo clean = run deploy script
 - TODO: screen recording, test sound, show saving path and the end
 - TODO: neomutt keybindings
 - TODO: nvim delete keybinding, try to use trash or place warning
@@ -65,8 +66,6 @@ tags:
 - TODO: check if I can use gpg-agent with pam
 
 - TODO: Shared fonts
-- TODO: auto insert mode in git-commit window (neovim)
-- TODO: audiobooks negentropy
 
 - TODO: https://www.youtube.com/watch?v=cgYMtuFa8Iw&t=3s
 - TODO: https://gist.github.com/nicosh/b4ef0d2392f78a241d600806c5328952
@@ -81,8 +80,6 @@ tags:
 - TODO: Vim format comments / align comments (vertical align)
 - TODO: Vim rename image under cursor in markdown file
 - TODO: proxy-server
-- TODO: hibernate/swap test
-- TODO: debugging articles
 - TODO: improve generate-image2.sh script
 
 - TODO: zotero script to find broken attachments (not linked...)
@@ -124,17 +121,20 @@ tags:
 
 ## Done
 
+- DONE: ffmpeg note
+- DONE: ffmpeg screen record script port from lukesmith dotfiles
+- DONE: neovim sudo save and read
 - DONE: mailsync and opent neomutt, use inbox.sh on `C-M-n` in kitty
 - DONE: telekasten link handler++ vim.cmd/other mix, I just fixed `gx`
 - DONE: https://github.com/systemd/zram-generator, added
 - DONE: review aliases
 - DONE: qmk qwerty fallback (additional layer)
 - DONE: https://superuser.com/questions/178587/how-do-i-detach-a-process-from-terminal-entirely
+- DONE: debugging articles - @DebuggingInNe
 - KILL: mpd workflow
 - KILL: https://zero-to-nix.com/start/install
 - KILL: "freetube-bin", browser is good enough
 - KILL: Workouts playlist in strawberry
-- KILL: setup post-commit hook for wiki
 - KILL: Find case for phone
 - KILL: check watch - 143391459
 - KILL: level 1, level 2, level 3 tags from zotero
