--- a/weekly/2023-W24.md
+++ b/weekly/2023-W24.md
@@ -17,10 +17,8 @@ tags:
 - TODO: workouts during the week according to the [[exercise plan]]
 - TODO: lessons from [Drawabox](https://drawabox.com/)
 
-
 ## Next
-- NEXT: how subtitute recursive search with confirmations using nvim?
-- NEXT: Fix Simple English Wikipedia not wikipedia in simple english
+
 - NEXT: replace '::TODO:' with 'TODO:\ ' in all notes and disable highlighting
 
 - NEXT: oneliner's programs optimizations -> .aliases if suitable
@@ -93,7 +91,7 @@ tags:
 - TODO: videos and pictures workflow
 - TODO: mouseless-workflow make more relevant
 - TODO: telekasten insert link follow grammar rules, add |title item, correct
-      rename (UUID issue?)
+  rename (UUID issue?)
 
 - TODO: koreader note
 - TODO: Xodo note
@@ -111,7 +109,7 @@ tags:
 - TODO: https://github.com/pallets/flask
 - TODO: deep pynev integration, no python3_host needed, need just to use pyenv
 - TODO: You could also use w !python to run your python program (no need to save, it will pass the content as stdin, that's what w ! is for).
-      That way you don't to support multiple languages in your plugin. Just instruct the users to use this Vim feature
+  That way you don't to support multiple languages in your plugin. Just instruct the users to use this Vim feature
 - TODO: https://aur.archlinux.org/packages/freetube-bin#:~:text=Package%20Details%3A-,freetube%2Dbin,-0.18.0%2D1
 - TODO: https://www.youtube.com/watch?v=RoHI83C9Fyk interview
 
@@ -121,6 +119,9 @@ tags:
 
 ## Done
 
+- DONE: how subtitute recursive search with confirmations using nvim?
+- DONE: https://thevaluable.dev/vim-search-find-replace/
+- DONE: Fix Simple English Wikipedia not Simple English Wikipedia
 - DONE: ffmpeg note
 - DONE: ffmpeg screen record script port from lukesmith dotfiles
 - DONE: neovim sudo save and read
