Done some tasks

--- a/weekly/2023-W24.md
+++ b/weekly/2023-W24.md
@@ -21,8 +21,6 @@ tags:
 
 - NEXT: replace '::TODO:' with 'TODO:\ ' in all notes and disable highlighting
 
-- NEXT: oneliner's programs optimizations -> .aliases if suitable
-
 - NEXT: singley-linked list
 - NEXT: doubly-linked-list
 - NEXT: skip list
@@ -32,9 +30,7 @@ tags:
 - NEXT: AVL Tree
 - NEXT: KD Tree
 
-- NEXT: audiobooks negentropy
 - NEXT: auto insert mode in git-commit window (neovim)
-- NEXT: Arch-mainetance to aliases
 - NEXT: rg guide (cht.sh version) + hidden files
 - NEXT: fd guide (cht.sh version) + hidden files
 - NEXT: backup instances, 3 - 2 - 1 additional directories and finalize
@@ -119,6 +115,7 @@ tags:
 
 ## Done
 
+- DONE: Arch-mainetance to aliases
 - DONE: how subtitute recursive search with confirmations using nvim?
 - DONE: https://thevaluable.dev/vim-search-find-replace/
 - DONE: Fix Simple English Wikipedia not Simple English Wikipedia
