--- a/weekly/2023-W24.md
+++ b/weekly/2023-W24.md
@@ -19,8 +19,9 @@ tags:
 
 ## Next
 
-- NEXT: replace '::TODO:' with 'TODO:\ ' in all notes and disable highlighting
-
+- NEXT: AdGuard notes
+- NEXT: save full screenshot update notification - add path
+- NEXT: shift+enter - dmenu term wait?
 - NEXT: singley-linked list
 - NEXT: doubly-linked-list
 - NEXT: skip list
@@ -30,64 +31,45 @@ tags:
 - NEXT: AVL Tree
 - NEXT: KD Tree
 
-- NEXT: auto insert mode in git-commit window (neovim)
-- NEXT: rg guide (cht.sh version) + hidden files
-- NEXT: fd guide (cht.sh version) + hidden files
 - NEXT: backup instances, 3 - 2 - 1 additional directories and finalize
-- NEXT: gnu pass note
-- NEXT: gnu pass negentropy
-- NEXT: golden dict cleanup, sort dictionaries
 - NEXT: hibernate disable? test suspend
 
 ## Inbox
 
-- TODO: setup post-commit hook for wiki, repo clean = run deploy script
+- TODO: check and fix telekasten templates, based on current file
+- TODO: post-coomit note
+- TODO: setup post-commit hook for wiki, if repo clean = run deploy script
 - TODO: screen recording, test sound, show saving path and the end
 - TODO: neomutt keybindings
 - TODO: nvim delete keybinding, try to use trash or place warning
 - TODO: todo toggle and empty line
 - TODO: zerotier own domain/hostname
 - TODO: settings repository sync?
-- TODO: check book Inko Ai Takita, Liz Staley - Learn Clip Studio Paint
 - TODO: work with z-shell note (hotkeys)
 - TODO: bash, readline - find diff, notes
 - TODO: review handmade hero to-do list
 - TODO: automatic lock on token remove/suspend, test (have some issues)
 - TODO: Certificates check (expired, etc...), cron job?
 - TODO: all used services in one place, awesome services
-- TODO: AdGuard notes
 - TODO: describe tasker/dnd setup
 - TODO: check if I can use gpg-agent with pam
-
-- TODO: Shared fonts
 
 - TODO: https://www.youtube.com/watch?v=cgYMtuFa8Iw&t=3s
 - TODO: https://gist.github.com/nicosh/b4ef0d2392f78a241d600806c5328952
 - TODO: pytest & pycon flashcards
 
-- TODO: dmenu keybindings to notes
-- TODO: gptVSmbr difference note
-- TODO: shift+enter - dmenu term wait?
-- TODO: assoc fix in brave? (rar)
-- TODO: test coc-pyright, custom nvim instance?
 - TODO: Vim image paste script (download image, resize, etc..., frequency hence?)
 - TODO: Vim format comments / align comments (vertical align)
 - TODO: Vim rename image under cursor in markdown file
 - TODO: proxy-server
 - TODO: improve generate-image2.sh script
 
-- TODO: zotero script to find broken attachments (not linked...)
 - TODO: dunst DND after better way to check notifications, tasker integration
 - TODO: habbit tasks and repeat them
 - TODO: adguard -> dns -> zerotier hosts
 - TODO: colorscheme check: khal, glances, ncdu
 
-- TODO: save full screenshot update notification - add path
 - TODO: opencv + screen + click script
-- TODO: videos and pictures workflow
-- TODO: mouseless-workflow make more relevant
-- TODO: telekasten insert link follow grammar rules, add |title item, correct
-  rename (UUID issue?)
 
 - TODO: koreader note
 - TODO: Xodo note
@@ -95,15 +77,12 @@ tags:
 - TODO: manga and comics note
 - TODO: tachiyomi note
 
-- TODO: [My Inventions Nikola Tesla](https://archive.org/details/MyInventionsNikolaTesla/page/n29/mode/2up)
-- TODO: [Crafting Interpreters](http://craftinginterpreters.com/)
-- TODO: ldd utility
-- TODO: openai SHAP-E
+- TODO: ldd utility note
+- TODO: openai SHAP-E test
 - TODO: https://webuxlab.com/en/projects/vm-passthrough-parsec
 - TODO: https://docs.onlykey.io/usersguide.html
 - TODO: termux/papis/tasker/share integration
 - TODO: https://github.com/pallets/flask
-- TODO: deep pynev integration, no python3_host needed, need just to use pyenv
 - TODO: You could also use w !python to run your python program (no need to save, it will pass the content as stdin, that's what w ! is for).
   That way you don't to support multiple languages in your plugin. Just instruct the users to use this Vim feature
 - TODO: https://aur.archlinux.org/packages/freetube-bin#:~:text=Package%20Details%3A-,freetube%2Dbin,-0.18.0%2D1
@@ -111,10 +90,16 @@ tags:
 
 ## Week highlights
 
-- TODO: https://github.com/justfoolingaround/animdl
+- TODO: [justfoolingaround/animdl anime downloader and streamer](https://github.com/justfoolingaround/animdl)
+- TODO: [My Inventions Nikola Tesla](https://archive.org/details/MyInventionsNikolaTesla/page/n29/mode/2up)
+- TODO: [Crafting Interpreters](http://craftinginterpreters.com/)
+- TODO: check book Inko Ai Takita, Liz Staley - Learn Clip Studio Paint
 
 ## Done
 
+- DONE: Shared fonts dir?
+- DONE: rg guide (cht.sh version) + hidden files
+- DONE: fd guide (cht.sh version) + hidden files
 - DONE: Arch-mainetance to aliases
 - DONE: how subtitute recursive search with confirmations using nvim?
 - DONE: https://thevaluable.dev/vim-search-find-replace/
@@ -129,7 +114,16 @@ tags:
 - DONE: qmk qwerty fallback (additional layer)
 - DONE: https://superuser.com/questions/178587/how-do-i-detach-a-process-from-terminal-entirely
 - DONE: debugging articles - @DebuggingInNe
+- DONE: auto insert mode in git-commit window (neovim)
+- DONE: telekasten use different linking method
+- DONE: dmenu keybindings to notes
+- DONE: zotero script to find broken attachments (not linked...)
+- DONE: gptVSmbr difference note
+- DONE: assoc fix: pdf, open dir in goldendict and other files
+- DONE: replace 'TODO' items with correct ones
+- DONE: gnu pass note
 
+- KILL: deep pynev integration, no python3_host needed, need just to use pyenv
 - KILL: mpd workflow
 - KILL: https://zero-to-nix.com/start/install
 - KILL: "freetube-bin", browser is good enough
@@ -137,3 +131,4 @@ tags:
 - KILL: Find case for phone
 - KILL: check watch - 143391459
 - KILL: level 1, level 2, level 3 tags from zotero
+- KILL: test coc-pyright, custom nvim instance?
