Complete some items

--- a/weekly/2023-W24.md
+++ b/weekly/2023-W24.md
@@ -9,16 +9,10 @@ tags:
 
 ## Significant events
 
-- TODO: lessons from [[papis/14f60db29650af4d6edb2aef6d5539da/notes]]
-- TODO: check/work with [[comprehensive python cheatsheet]]
-- TODO: lessons from [[papis/2ef118ce3473c9fe93acfc371e3f736e-wengrow-jay/notes]]
-- TODO: lessons from [[papis/9c8a1a90d37c313ce0809814e3c99f82-kernighan-brian-w./notes]]
-- TODO: [[papis/6f54b541f411cd3867159abbed2f6373-muratori-casey/notes]] videos during the week
-- TODO: workouts during the week according to the [[exercise plan]]
-- TODO: lessons from [Drawabox](https://drawabox.com/)
 
 ## Next
 
+- TODO: work with z-shell note (hotkeys)
 - NEXT: AdGuard notes
 - NEXT: save full screenshot update notification - add path
 - NEXT: shift+enter - dmenu term wait?
@@ -37,16 +31,13 @@ tags:
 ## Inbox
 
 - TODO: check and fix telekasten templates, based on current file
-- TODO: post-coomit note
+- TODO: post-comit note
 - TODO: setup post-commit hook for wiki, if repo clean = run deploy script
-- TODO: screen recording, test sound, show saving path and the end
 - TODO: neomutt keybindings
 - TODO: nvim delete keybinding, try to use trash or place warning
 - TODO: todo toggle and empty line
 - TODO: zerotier own domain/hostname
 - TODO: settings repository sync?
-- TODO: work with z-shell note (hotkeys)
-- TODO: bash, readline - find diff, notes
 - TODO: review handmade hero to-do list
 - TODO: automatic lock on token remove/suspend, test (have some issues)
 - TODO: Certificates check (expired, etc...), cron job?
@@ -72,10 +63,8 @@ tags:
 - TODO: opencv + screen + click script
 
 - TODO: koreader note
-- TODO: Xodo note
 - TODO: encyclopedia
 - TODO: manga and comics note
-- TODO: tachiyomi note
 
 - TODO: ldd utility note
 - TODO: openai SHAP-E test
@@ -83,8 +72,6 @@ tags:
 - TODO: https://docs.onlykey.io/usersguide.html
 - TODO: termux/papis/tasker/share integration
 - TODO: https://github.com/pallets/flask
-- TODO: You could also use w !python to run your python program (no need to save, it will pass the content as stdin, that's what w ! is for).
-  That way you don't to support multiple languages in your plugin. Just instruct the users to use this Vim feature
 - TODO: https://aur.archlinux.org/packages/freetube-bin#:~:text=Package%20Details%3A-,freetube%2Dbin,-0.18.0%2D1
 - TODO: https://www.youtube.com/watch?v=RoHI83C9Fyk interview
 
@@ -97,6 +84,7 @@ tags:
 
 ## Done
 
+- DONE: readline enable vi mode
 - DONE: Shared fonts dir?
 - DONE: rg guide (cht.sh version) + hidden files
 - DONE: fd guide (cht.sh version) + hidden files
@@ -122,7 +110,10 @@ tags:
 - DONE: assoc fix: pdf, open dir in goldendict and other files
 - DONE: replace 'TODO' items with correct ones
 - DONE: gnu pass note
+- DONE: screen recording, test sound, show saving path and the end
 
+- KILL: tachiyomi note
+- KILL: Xodo note
 - KILL: deep pynev integration, no python3_host needed, need just to use pyenv
 - KILL: mpd workflow
 - KILL: https://zero-to-nix.com/start/install
