Update weekly tasks

--- a/weekly/2023-W24.md
+++ b/weekly/2023-W24.md
@@ -5,18 +5,11 @@ tags:
 
 # Review Week 24 / 2023
 
----
-
-## Significant events
-
-
-## Next
-
-- TODO: work with z-shell note (hotkeys)
-- NEXT: AdGuard notes
+- NEXT: Xodo note
 - NEXT: save full screenshot update notification - add path
-- NEXT: shift+enter - dmenu term wait?
-- NEXT: singley-linked list
+- NEXT: AdGuard notes
+- NEXT: shift+enter and dmenu term wait?
+- NEXT: single-linked list
 - NEXT: doubly-linked-list
 - NEXT: skip list
 - NEXT: Cartesian tree
@@ -24,78 +17,21 @@ tags:
 - NEXT: Splay Tree
 - NEXT: AVL Tree
 - NEXT: KD Tree
-
 - NEXT: backup instances, 3 - 2 - 1 additional directories and finalize
 - NEXT: hibernate disable? test suspend
-
-## Inbox
-
-- TODO: check and fix telekasten templates, based on current file
-- TODO: post-comit note
-- TODO: setup post-commit hook for wiki, if repo clean = run deploy script
-- TODO: neomutt keybindings
-- TODO: nvim delete keybinding, try to use trash or place warning
-- TODO: todo toggle and empty line
-- TODO: zerotier own domain/hostname
-- TODO: settings repository sync?
-- TODO: review handmade hero to-do list
-- TODO: automatic lock on token remove/suspend, test (have some issues)
-- TODO: Certificates check (expired, etc...), cron job?
-- TODO: all used services in one place, awesome services
-- TODO: describe tasker/dnd setup
-- TODO: check if I can use gpg-agent with pam
-
-- TODO: https://www.youtube.com/watch?v=cgYMtuFa8Iw&t=3s
-- TODO: https://gist.github.com/nicosh/b4ef0d2392f78a241d600806c5328952
-- TODO: pytest & pycon flashcards
-
-- TODO: Vim image paste script (download image, resize, etc..., frequency hence?)
-- TODO: Vim format comments / align comments (vertical align)
-- TODO: Vim rename image under cursor in markdown file
-- TODO: proxy-server
-- TODO: improve generate-image2.sh script
-
-- TODO: dunst DND after better way to check notifications, tasker integration
-- TODO: habbit tasks and repeat them
-- TODO: adguard -> dns -> zerotier hosts
-- TODO: colorscheme check: khal, glances, ncdu
-
-- TODO: opencv + screen + click script
-
-- TODO: koreader note
-- TODO: encyclopedia
-- TODO: manga and comics note
-
-- TODO: ldd utility note
-- TODO: openai SHAP-E test
-- TODO: https://webuxlab.com/en/projects/vm-passthrough-parsec
-- TODO: https://docs.onlykey.io/usersguide.html
-- TODO: termux/papis/tasker/share integration
-- TODO: https://github.com/pallets/flask
-- TODO: https://aur.archlinux.org/packages/freetube-bin#:~:text=Package%20Details%3A-,freetube%2Dbin,-0.18.0%2D1
-- TODO: https://www.youtube.com/watch?v=RoHI83C9Fyk interview
-
-## Week highlights
-
-- TODO: [justfoolingaround/animdl anime downloader and streamer](https://github.com/justfoolingaround/animdl)
-- TODO: [My Inventions Nikola Tesla](https://archive.org/details/MyInventionsNikolaTesla/page/n29/mode/2up)
-- TODO: [Crafting Interpreters](http://craftinginterpreters.com/)
-- TODO: check book Inko Ai Takita, Liz Staley - Learn Clip Studio Paint
-
-## Done
-
+- DONE: Tachiyomi note
 - DONE: readline enable vi mode
-- DONE: Shared fonts dir?
+- DONE: Shared font's directory?
 - DONE: rg guide (cht.sh version) + hidden files
 - DONE: fd guide (cht.sh version) + hidden files
-- DONE: Arch-mainetance to aliases
-- DONE: how subtitute recursive search with confirmations using nvim?
+- DONE: Arch Linux maintenance to aliases
+- DONE: how substitute recursive search with confirmations using nvim?
 - DONE: https://thevaluable.dev/vim-search-find-replace/
 - DONE: Fix Simple English Wikipedia not Simple English Wikipedia
 - DONE: ffmpeg note
-- DONE: ffmpeg screen record script port from lukesmith dotfiles
+- DONE: ffmpeg screen record script port from Luke Smith dotfiles
 - DONE: neovim sudo save and read
-- DONE: mailsync and opent neomutt, use inbox.sh on `C-M-n` in kitty
+- DONE: mail sync and open neomutt, use inbox.sh on `C-M-n` in kitty
 - DONE: telekasten link handler++ vim.cmd/other mix, I just fixed `gx`
 - DONE: https://github.com/systemd/zram-generator, added
 - DONE: review aliases
@@ -106,16 +42,13 @@ tags:
 - DONE: telekasten use different linking method
 - DONE: dmenu keybindings to notes
 - DONE: zotero script to find broken attachments (not linked...)
-- DONE: gptVSmbr difference note
-- DONE: assoc fix: pdf, open dir in goldendict and other files
+- DONE: GPT vs MPR difference note
+- DONE: assoc fix: PDF, open directory in goldendict and other files
 - DONE: replace 'TODO' items with correct ones
 - DONE: gnu pass note
 - DONE: screen recording, test sound, show saving path and the end
-
-- KILL: tachiyomi note
-- KILL: Xodo note
 - KILL: deep pynev integration, no python3_host needed, need just to use pyenv
-- KILL: mpd workflow
+- KILL: MPD workflow
 - KILL: https://zero-to-nix.com/start/install
 - KILL: "freetube-bin", browser is good enough
 - KILL: Workouts playlist in strawberry
@@ -123,3 +56,48 @@ tags:
 - KILL: check watch - 143391459
 - KILL: level 1, level 2, level 3 tags from zotero
 - KILL: test coc-pyright, custom nvim instance?
+- TODO: work with z-shell note (hotkeys)
+- TODO: monitoring: cert, GitHub info, GitLab info, errors, etc...
+- TODO: check and fix telekasten templates, based on current file
+- TODO: post-comit note
+- TODO: setup post-commit hook for wiki, if repo clean = run deploy script
+- TODO: neomutt keybindings
+- TODO: nvim delete keybinding, try to use trash or place warning
+- TODO: TODO toggle and empty line
+- TODO: zerotier own domain/hostname
+- TODO: settings repository sync?
+- TODO: review handmade hero to-do list
+- TODO: automatic lock on token remove/suspend, test (have some issues)
+- TODO: Certificates check (expired, etc...), cron job?
+- TODO: all used services in one place, awesome services
+- TODO: describe tasker/DND setup
+- TODO: check if I can use GPG-agent with PAM
+- TODO: https://www.youtube.com/watch?v=cgYMtuFa8Iw&t=3s
+- TODO: https://gist.github.com/nicosh/b4ef0d2392f78a241d600806c5328952
+- TODO: pytest & pycon flashcards
+- TODO: Vim image paste script (download image, resize, etc..., frequency hence?)
+- TODO: Vim format comments / align comments (vertical align)
+- TODO: Vim rename image under cursor in markdown file
+- TODO: proxy-server
+- TODO: improve generate-image2.sh script
+- TODO: dunst DND after better way to check notifications, tasker integration
+- TODO: habit tasks and repeat them
+- TODO: AdGuard → DNS → zerotier hosts
+- TODO: kitty insert symbol, arrows insert
+- TODO: color scheme check: khal, glances, ncdu
+- TODO: OpenCV + screen + click script
+- TODO: KOReader note
+- TODO: encyclopedia
+- TODO: manga and comics note
+- TODO: `ldd` utility note
+- TODO: OpenAI `SHAP-E` test
+- TODO: https://webuxlab.com/en/projects/vm-passthrough-parsec
+- TODO: https://docs.onlykey.io/usersguide.html
+- TODO: termux/papis/tasker/share integration
+- TODO: https://github.com/pallets/flask
+- TODO: https://aur.archlinux.org/packages/freetube-bin#:~:text=Package%20Details%3A-,freetube%2Dbin,-0.18.0%2D1
+- TODO: https://www.youtube.com/watch?v=RoHI83C9Fyk interview
+- TODO: [justfoolingaround/animdl anime downloader and streamer](https://github.com/justfoolingaround/animdl)
+- TODO: [My Inventions Nikola Tesla](https://archive.org/details/MyInventionsNikolaTesla/page/n29/mode/2up)
+- TODO: [Crafting Interpreters](http://craftinginterpreters.com/)
+- TODO: check book "Inko Ai Takita, Liz Staley - Learn Clip Studio Paint"
