--- a/weekly/2023-W24.md
+++ b/weekly/2023-W24.md
@@ -5,20 +5,12 @@ tags:
 
 # Review Week 24 / 2023
 
-- NEXT: Cartesian tree
-- NEXT: Red-Black Tree
-- NEXT: Splay Tree
-- NEXT: AVL Tree
-- NEXT: KD Tree
-- NEXT: Xodo note
-- NEXT: save full screenshot update notification - add path
-- NEXT: AdGuard notes
-- NEXT: shift+enter and dmenu term wait?
-- NEXT: single-linked list
-- NEXT: doubly-linked-list
-- NEXT: skip list
-- NEXT: backup instances, 3 - 2 - 1 additional directories and finalize
-- NEXT: hibernate disable? test suspend
+- DONE: KOReader note
+- DONE: AdGuard notes
+- DONE: `venv` note
+- DONE: save full screenshot update notification - add path, use s-PrtSc
+- DONE: hibernate disable? test suspend
+- DONE: dunst DND after better way to check notifications, tasker integration
 - DONE: Tachiyomi note
 - DONE: readline enable vi mode
 - DONE: Shared font's directory?
@@ -47,6 +39,7 @@ tags:
 - DONE: replace 'TODO' items with correct ones
 - DONE: gnu pass note
 - DONE: screen recording, test sound, show saving path and the end
+- KILL: Xodo note
 - KILL: deep pynev integration, no python3_host needed, need just to use pyenv
 - KILL: MPD workflow
 - KILL: https://zero-to-nix.com/start/install
@@ -56,48 +49,3 @@ tags:
 - KILL: check watch - 143391459
 - KILL: level 1, level 2, level 3 tags from zotero
 - KILL: test coc-pyright, custom nvim instance?
-- TODO: work with z-shell note (hotkeys)
-- TODO: monitoring: cert, GitHub info, GitLab info, errors, etc...
-- TODO: check and fix telekasten templates, based on current file
-- TODO: post-comit note
-- TODO: setup post-commit hook for wiki, if repo clean = run deploy script
-- TODO: neomutt keybindings
-- TODO: nvim delete keybinding, try to use trash or place warning
-- TODO: TODO toggle and empty line
-- TODO: zerotier own domain/hostname
-- TODO: settings repository sync?
-- TODO: review handmade hero to-do list
-- TODO: automatic lock on token remove/suspend, test (have some issues)
-- TODO: Certificates check (expired, etc...), cron job?
-- TODO: all used services in one place, awesome services
-- TODO: describe tasker/DND setup
-- TODO: check if I can use GPG-agent with PAM
-- TODO: https://www.youtube.com/watch?v=cgYMtuFa8Iw&t=3s
-- TODO: https://gist.github.com/nicosh/b4ef0d2392f78a241d600806c5328952
-- TODO: pytest & pycon flashcards
-- TODO: Vim image paste script (download image, resize, etc..., frequency hence?)
-- TODO: Vim format comments / align comments (vertical align)
-- TODO: Vim rename image under cursor in markdown file
-- TODO: proxy-server
-- TODO: improve generate-image2.sh script
-- TODO: dunst DND after better way to check notifications, tasker integration
-- TODO: habit tasks and repeat them
-- TODO: AdGuard → DNS → zerotier hosts
-- TODO: kitty insert symbol, arrows insert
-- TODO: color scheme check: khal, glances, ncdu
-- TODO: OpenCV + screen + click script
-- TODO: KOReader note
-- TODO: encyclopedia
-- TODO: manga and comics note
-- TODO: `ldd` utility note
-- TODO: OpenAI `SHAP-E` test
-- TODO: https://webuxlab.com/en/projects/vm-passthrough-parsec
-- TODO: https://docs.onlykey.io/usersguide.html
-- TODO: termux/papis/tasker/share integration
-- TODO: https://github.com/pallets/flask
-- TODO: https://aur.archlinux.org/packages/freetube-bin#:~:text=Package%20Details%3A-,freetube%2Dbin,-0.18.0%2D1
-- TODO: https://www.youtube.com/watch?v=RoHI83C9Fyk interview
-- TODO: [justfoolingaround/animdl anime downloader and streamer](https://github.com/justfoolingaround/animdl)
-- TODO: [My Inventions Nikola Tesla](https://archive.org/details/MyInventionsNikolaTesla/page/n29/mode/2up)
-- TODO: [Crafting Interpreters](http://craftinginterpreters.com/)
-- TODO: check book "Inko Ai Takita, Liz Staley - Learn Clip Studio Paint"
