Complete some todo items

--- a/weekly/2023-W25.md
+++ b/weekly/2023-W25.md
@@ -7,12 +7,13 @@ tags:
 
 Don't worry, be happy 🍭
 
-- KILL: `ldd` utility note, man is good enough, added into my software note
-- NEXT: backup instances, 3 - 2 - 1 additional directories and finalize
-- NEXT: single-linked list
-- NEXT: doubly-linked-list
 - NEXT: KOReader notes, read add own notes
-- NEXT: Bing Chatgpt4 integration
+- NEXT: backup instances, 3 - 2 - 1 additional directories and finalize
+- DONE: test bell and termdown, enabled in kitty
+- DONE: Chatgpt4 integration, custom styled + chrome profile
+- KILL: `ldd` utility note, man is good enough, added into my software note
+- KILL: single-linked list note, I'll learn it in book
+- KILL: doubly-linked-list note, I'll learn it in book
 - TODO: replace _email to actual email
 - TODO: OpenAI `SHAP-E` test, probably require CUDA
 - TODO: https://www.youtube.com/watch?v=YFlC6RL1MmM
