Update todo list

--- a/weekly/2023-W25.md
+++ b/weekly/2023-W25.md
@@ -7,15 +7,18 @@ tags:
 
 Don't worry, be happy 🍭
 
-- NEXT: KOReader notes, read add own notes
 - NEXT: backup instances, 3 - 2 - 1 additional directories and finalize
+- NEXT: reconfigure syncthing: PDF notes
+- NEXT: VNC remote access
 - DONE: test bell and termdown, enabled in kitty
 - DONE: Chatgpt4 integration, custom styled + chrome profile
+- DONE: tablet cleanup
 - KILL: `ldd` utility note, man is good enough, added into my software note
 - KILL: single-linked list note, I'll learn it in book
 - KILL: doubly-linked-list note, I'll learn it in book
+- TODO: https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/removing-sensitive-data-from-a-repository
+- TODO: cleanup wiki and project
 - TODO: replace _email to actual email
-- TODO: OpenAI `SHAP-E` test, probably require CUDA
 - TODO: https://www.youtube.com/watch?v=YFlC6RL1MmM
 - TODO: <https://prodia.com/>
 - TODO: [pre-commit](https://pre-commit.com/) note
@@ -58,7 +61,6 @@ Don't worry, be happy 🍭
 - TODO: manga and comics note
 - TODO: https://webuxlab.com/en/projects/vm-passthrough-parsec
 - TODO: https://docs.onlykey.io/usersguide.html
-- TODO: termux/papis/tasker/share integration
 - TODO: https://github.com/pallets/flask
 - TODO: https://aur.archlinux.org/packages/freetube-bin#:~:text=Package%20Details%3A-,freetube%2Dbin,-0.18.0%2D1
 - TODO: https://www.youtube.com/watch?v=RoHI83C9Fyk interview
@@ -67,3 +69,6 @@ Don't worry, be happy 🍭
 - TODO: [Crafting Interpreters](http://craftinginterpreters.com/)
 - TODO: check book "Inko Ai Takita, Liz Staley - Learn Clip Studio Paint"
 - TODO: https://www.digitalocean.com/community/tutorials/how-to-use-traefik-v2-as-a-reverse-proxy-for-docker-containers-on-ubuntu-20-04
+- TODO: KOReader notes, read add own notes
+- KILL: OpenAI `SHAP-E` test, probably require CUDA
+- KILL: termux/papis/tasker/share integration
