--- a/weekly/2023-W25.md
+++ b/weekly/2023-W25.md
@@ -10,6 +10,12 @@ Don't worry, be happy 🍭
 - NEXT: backup instances, 3 - 2 - 1 additional directories and finalize
 - NEXT: reconfigure syncthing: PDF notes
 - NEXT: VNC remote access
+- TODO: papis prepare rename names,
+```
+rg shorttitle fix, get year, etc
+papis list --all --format '{doc[year]}-{doc[author]}-{doc[shorttitle]}'|tac|tr ', ' '_'|tr '__' '_
+papis list -a|tac
+```
 - DONE: test bell and termdown, enabled in kitty
 - DONE: Chatgpt4 integration, custom styled + chrome profile
 - DONE: tablet cleanup
