Update todo items

--- a/weekly/2023-W25.md
+++ b/weekly/2023-W25.md
@@ -7,24 +7,35 @@ tags:
 
 Don't worry, be happy 🍭
 
+- NEXT: re-read intro of @ACommonSenseWengro2020
+- NEXT: re-read chapter 1 of @ACommonSenseWengro2020
+- NEXT: check/write notes of @ACommonSenseWengro2020
 - NEXT: backup instances, 3 - 2 - 1 additional directories and finalize
 - NEXT: reconfigure syncthing: PDF notes
 - NEXT: VNC remote access
 - TODO: papis prepare rename names,
+
 ```
 rg shorttitle fix, get year, etc
 papis list --all --format '{doc[year]}-{doc[author]}-{doc[shorttitle]}'|tac|tr ', ' '_'|tr '__' '_
 papis list -a|tac
 ```
+
+- use global prettier in wiki
+- fix <http:// urls
+[[my articles list (publishing)]]
+[[my pet projects]]
+
 - DONE: test bell and termdown, enabled in kitty
 - DONE: Chatgpt4 integration, custom styled + chrome profile
 - DONE: tablet cleanup
 - KILL: `ldd` utility note, man is good enough, added into my software note
 - KILL: single-linked list note, I'll learn it in book
 - KILL: doubly-linked-list note, I'll learn it in book
-- TODO: https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/removing-sensitive-data-from-a-repository
+- TODO:
+  https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/removing-sensitive-data-from-a-repository
 - TODO: cleanup wiki and project
-- TODO: replace _email to actual email
+- TODO: replace \_email to actual email
 - TODO: https://www.youtube.com/watch?v=YFlC6RL1MmM
 - TODO: <https://prodia.com/>
 - TODO: [pre-commit](https://pre-commit.com/) note
@@ -54,7 +65,8 @@ papis list -a|tac
 - TODO: https://www.youtube.com/watch?v=cgYMtuFa8Iw&t=3s
 - TODO: https://gist.github.com/nicosh/b4ef0d2392f78a241d600806c5328952
 - TODO: pytest & pycon flashcards
-- TODO: Vim image paste script (download image, resize, etc..., frequency hence?)
+- TODO: Vim image paste script (download image, resize, etc..., frequency
+  hence?)
 - TODO: Vim format comments / align comments (vertical align)
 - TODO: Vim rename image under cursor in markdown file
 - TODO: improve generate-image2.sh script
@@ -68,13 +80,17 @@ papis list -a|tac
 - TODO: https://webuxlab.com/en/projects/vm-passthrough-parsec
 - TODO: https://docs.onlykey.io/usersguide.html
 - TODO: https://github.com/pallets/flask
-- TODO: https://aur.archlinux.org/packages/freetube-bin#:~:text=Package%20Details%3A-,freetube%2Dbin,-0.18.0%2D1
+- TODO:
+  https://aur.archlinux.org/packages/freetube-bin#:~:text=Package%20Details%3A-,freetube%2Dbin,-0.18.0%2D1
 - TODO: https://www.youtube.com/watch?v=RoHI83C9Fyk interview
-- TODO: [justfoolingaround/animdl anime downloader and streamer](https://github.com/justfoolingaround/animdl)
-- TODO: [My Inventions Nikola Tesla](https://archive.org/details/MyInventionsNikolaTesla/page/n29/mode/2up)
+- TODO:
+  [justfoolingaround/animdl anime downloader and streamer](https://github.com/justfoolingaround/animdl)
+- TODO:
+  [My Inventions Nikola Tesla](https://archive.org/details/MyInventionsNikolaTesla/page/n29/mode/2up)
 - TODO: [Crafting Interpreters](http://craftinginterpreters.com/)
 - TODO: check book "Inko Ai Takita, Liz Staley - Learn Clip Studio Paint"
-- TODO: https://www.digitalocean.com/community/tutorials/how-to-use-traefik-v2-as-a-reverse-proxy-for-docker-containers-on-ubuntu-20-04
+- TODO:
+  https://www.digitalocean.com/community/tutorials/how-to-use-traefik-v2-as-a-reverse-proxy-for-docker-containers-on-ubuntu-20-04
 - TODO: KOReader notes, read add own notes
 - KILL: OpenAI `SHAP-E` test, probably require CUDA
 - KILL: termux/papis/tasker/share integration
