Rewirite/refactor bunch of notes

--- a/weekly/2023-W25.md
+++ b/weekly/2023-W25.md
@@ -7,6 +7,13 @@ tags:
 
 Don't worry, be happy 🍭
 
+- NEXT: https://www.youtube.com/watch?v=qgG5Jhi_Els
+- NEXT: https://sbulav.github.io/
+- NEXT: tjvideos pack
+  * https://www.youtube.com/watch?v=v3o9YaHBM4Q
+  * https://www.youtube.com/watch?v=9gUatBHuXE0
+  * https://www.youtube.com/watch?v=HlfjpstqXwE
+- TODO: partial reformat, markdown
 - NEXT: re-read intro of @ACommonSenseWengro2020
 - NEXT: re-read chapter 1 of @ACommonSenseWengro2020
 - NEXT: check/write notes of @ACommonSenseWengro2020
@@ -14,30 +21,25 @@ Don't worry, be happy 🍭
 - NEXT: reconfigure syncthing: PDF notes
 - NEXT: VNC remote access
 - TODO: papis prepare rename names,
-
+- TODO: fix notes with :: {xxx}, ?/?? etc.
+- TODO: find links not wrapped in `[]` and fix
+- TODO: fix papis notes
 ```
-rg shorttitle fix, get year, etc
-papis list --all --format '{doc[year]}-{doc[author]}-{doc[shorttitle]}'|tac|tr ', ' '_'|tr '__' '_
+papis list --all --format '{doc[year]}-{doc[author]}-{doc[shorttitle]}'|tac|tr
+', ' '_'|tr '__' '_
 papis list -a|tac
 ```
+- TODO: fix <http:// URLs, not compatible with telekasten
+- TODO: review [[my articles list (publishing)]]
+- TODO: review [[my pet projects]]
 
-- use global prettier in wiki
-- fix <http:// urls
-[[my articles list (publishing)]]
-[[my pet projects]]
-
-- DONE: test bell and termdown, enabled in kitty
-- DONE: Chatgpt4 integration, custom styled + chrome profile
-- DONE: tablet cleanup
-- KILL: `ldd` utility note, man is good enough, added into my software note
-- KILL: single-linked list note, I'll learn it in book
-- KILL: doubly-linked-list note, I'll learn it in book
-- TODO:
-  https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/removing-sensitive-data-from-a-repository
+- TODO: rebuild spaced repetition system using <!-- prettier-ignore-start -->
+when it's required
+- TODO: https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/removing-sensitive-data-from-a-repository
 - TODO: cleanup wiki and project
 - TODO: replace \_email to actual email
 - TODO: https://www.youtube.com/watch?v=YFlC6RL1MmM
-- TODO: <https://prodia.com/>
+- TODO: https://prodia.com/
 - TODO: [pre-commit](https://pre-commit.com/) note
 - TODO: Cartesian tree
 - TODO: Red-Black Tree
@@ -56,7 +58,6 @@ papis list -a|tac
 - TODO: zerotier own domain/hostname
 - TODO: settings repository sync?
 - TODO: review handmade hero to-do list
-- TODO: automatic lock on token remove/suspend, test (have some issues)
 - TODO: Certificates check (expired, etc...), cron job?
 - TODO: all used services in one place, awesome services
 - TODO: describe tasker/DND setup
@@ -92,5 +93,22 @@ papis list -a|tac
 - TODO:
   https://www.digitalocean.com/community/tutorials/how-to-use-traefik-v2-as-a-reverse-proxy-for-docker-containers-on-ubuntu-20-04
 - TODO: KOReader notes, read add own notes
+- TODO: https://myst-parser.readthedocs.io/en/latest/syntax/typography.html
+- TODO: update quotes to this format:
+> Quote here.\
+> —&thinsp;<cite>Benjamin Franklin</cite>
 - KILL: OpenAI `SHAP-E` test, probably require CUDA
 - KILL: termux/papis/tasker/share integration
+- KILL: Chatgpt4 integration, custom styled + chrome profile
+- KILL: use global prettier in wiki
+- KILL: `ldd` utility note, man is good enough, added into my software note
+- KILL: single-linked list note, I'll learn it in book
+- KILL: doubly-linked-list note, I'll learn it in book
+- DONE: test bell and termdown, enabled in kitty
+- DONE: tablet cleanup
+- DONE: rg `shorttitle` fix, get year, etc
+- kitty workflow
+- asahi linux workflow
+- inbox2synergy
+- suspend instead poweroff on button press
+- TODO: automatic lock on token remove/suspend, test (have some issues)
