Adjust todo list

--- a/weekly/2023-W25.md
+++ b/weekly/2023-W25.md
@@ -7,30 +7,24 @@ tags:
 
 Don't worry, be happy 🍭
 
-- NEXT: https://www.youtube.com/watch?v=qgG5Jhi_Els
-- NEXT: https://sbulav.github.io/
-- NEXT: tjvideos pack
-  * https://www.youtube.com/watch?v=v3o9YaHBM4Q
-  * https://www.youtube.com/watch?v=9gUatBHuXE0
-  * https://www.youtube.com/watch?v=HlfjpstqXwE
+- LOOP: iterate over old notes (2-4 notes per day)
+- TODO: fix notes with :: {xxx}, ?/?? etc.
+- TODO: find links not wrapped in `[]` and fix
 - TODO: update quotes to this format:
 > Quote here.\
 > —&thinsp;<cite>Benjamin Franklin</cite>
+
+- NEXT: tj videos pack
+  * https://www.youtube.com/watch?v=v3o9YaHBM4Q
+  * https://www.youtube.com/watch?v=9gUatBHuXE0
+  * https://www.youtube.com/watch?v=HlfjpstqXwE
+- NEXT: https://www.youtube.com/watch?v=qgG5Jhi_Els
+- NEXT: https://sbulav.github.io/
 - NEXT: re-read intro of @ACommonSenseWengro2020
 - NEXT: re-read chapter 1 of @ACommonSenseWengro2020
 - NEXT: check/write notes of @ACommonSenseWengro2020
 - NEXT: backup instances, 3 - 2 - 1 additional directories and finalize
 - NEXT: reconfigure syncthing: PDF notes
-- NEXT: VNC remote access
-- TODO: papis prepare rename names,
-- TODO: fix notes with :: {xxx}, ?/?? etc.
-- TODO: find links not wrapped in `[]` and fix
-- TODO: fix papis notes
-```
-papis list --all --format '{doc[year]}-{doc[author]}-{doc[shorttitle]}'|tac|tr
-', ' '_'|tr '__' '_
-papis list -a|tac
-```
 - TODO: fix <http:// URLs, not compatible with telekasten
 - TODO: review [[my articles list (publishing)]]
 - TODO: review [[my pet projects]]
@@ -96,6 +90,11 @@ when it's required
   https://www.digitalocean.com/community/tutorials/how-to-use-traefik-v2-as-a-reverse-proxy-for-docker-containers-on-ubuntu-20-04
 - TODO: KOReader notes, read add own notes
 - TODO: https://myst-parser.readthedocs.io/en/latest/syntax/typography.html
+- TODO: kitty workflow
+- TODO: inbox2synergy
+- TODO: suspend instead poweroff on button press
+- TODO: automatic lock on token remove/suspend, test (have some issues)
+- KILL: asahi Linux workflow, too specific
 - KILL: OpenAI `SHAP-E` test, probably require CUDA
 - KILL: termux/papis/tasker/share integration
 - KILL: Chatgpt4 integration, custom styled + chrome profile
@@ -103,11 +102,13 @@ when it's required
 - KILL: `ldd` utility note, man is good enough, added into my software note
 - KILL: single-linked list note, I'll learn it in book
 - KILL: doubly-linked-list note, I'll learn it in book
+- KILL: VNC remote access, too slow, use rustdeck instead
+- DONE: papis prepare rename names,
+```
+papis list --all --format '{doc[year]}-{doc[author]}-{doc[shorttitle]}'|tac|tr
+', ' '_'|tr '__' '_
+papis list -a|tac
+```
 - DONE: test bell and termdown, enabled in kitty
 - DONE: tablet cleanup
 - DONE: rg `shorttitle` fix, get year, etc
-- kitty workflow
-- asahi linux workflow
-- inbox2synergy
-- suspend instead poweroff on button press
-- TODO: automatic lock on token remove/suspend, test (have some issues)
