--- a/weekly/2023-W25.md
+++ b/weekly/2023-W25.md
@@ -14,29 +14,18 @@ Don't worry, be happy 🍭
 > Quote here.\
 > —&thinsp;<cite>Benjamin Franklin</cite>
 
-- NEXT: tj videos pack
-  * https://www.youtube.com/watch?v=v3o9YaHBM4Q
-  * https://www.youtube.com/watch?v=9gUatBHuXE0
-  * https://www.youtube.com/watch?v=HlfjpstqXwE
 - NEXT: https://www.youtube.com/watch?v=qgG5Jhi_Els
 - NEXT: https://sbulav.github.io/
-- NEXT: re-read intro of @ACommonSenseWengro2020
-- NEXT: re-read chapter 1 of @ACommonSenseWengro2020
-- NEXT: check/write notes of @ACommonSenseWengro2020
 - NEXT: backup instances, 3 - 2 - 1 additional directories and finalize
 - NEXT: reconfigure syncthing: PDF notes
+- TODO: kitty workflow & note
 - TODO: fix <http:// URLs, not compatible with telekasten
 - TODO: review [[my articles list (publishing)]]
 - TODO: review [[my pet projects]]
-
 - TODO: rebuild spaced repetition system using <!-- prettier-ignore-start -->
 when it's required
-- TODO: https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/removing-sensitive-data-from-a-repository
 - TODO: cleanup wiki and project
 - TODO: replace \_email to actual email
-- TODO: https://www.youtube.com/watch?v=YFlC6RL1MmM
-- TODO: https://prodia.com/
-- TODO: [pre-commit](https://pre-commit.com/) note
 - TODO: Cartesian tree
 - TODO: Red-Black Tree
 - TODO: Splay Tree
@@ -74,23 +63,7 @@ when it's required
 - TODO: OpenCV + screen + click script
 - TODO: encyclopedia
 - TODO: manga and comics note
-- TODO: https://webuxlab.com/en/projects/vm-passthrough-parsec
-- TODO: https://docs.onlykey.io/usersguide.html
-- TODO: https://github.com/pallets/flask
-- TODO:
-  https://aur.archlinux.org/packages/freetube-bin#:~:text=Package%20Details%3A-,freetube%2Dbin,-0.18.0%2D1
-- TODO: https://www.youtube.com/watch?v=RoHI83C9Fyk interview
-- TODO:
-  [justfoolingaround/animdl anime downloader and streamer](https://github.com/justfoolingaround/animdl)
-- TODO:
-  [My Inventions Nikola Tesla](https://archive.org/details/MyInventionsNikolaTesla/page/n29/mode/2up)
-- TODO: [Crafting Interpreters](http://craftinginterpreters.com/)
-- TODO: check book "Inko Ai Takita, Liz Staley - Learn Clip Studio Paint"
-- TODO:
-  https://www.digitalocean.com/community/tutorials/how-to-use-traefik-v2-as-a-reverse-proxy-for-docker-containers-on-ubuntu-20-04
 - TODO: KOReader notes, read add own notes
-- TODO: https://myst-parser.readthedocs.io/en/latest/syntax/typography.html
-- TODO: kitty workflow
 - TODO: inbox2synergy
 - TODO: suspend instead poweroff on button press
 - TODO: automatic lock on token remove/suspend, test (have some issues)
