Add new todo items

--- a/weekly/2023-W25.md
+++ b/weekly/2023-W25.md
@@ -8,6 +8,8 @@ tags:
 Don't worry, be happy 🍭
 
 - LOOP: iterate over old notes (2-4 notes per day)
+- TODO: vim keybindings notes/labels
+- TODO: obsidian vim integration default mode (not editing!)
 - TODO: fix notes with :: {xxx}, ?/?? etc.
 - TODO: find links not wrapped in `[]` and fix
 - TODO: update quotes to this format:
