Add taskwarior info

--- a/weekly/2023-W25.md
+++ b/weekly/2023-W25.md
@@ -5,9 +5,30 @@ tags:
 
 # 25 / 2023
 
-Don't worry, be happy 🍭
+Back to taskwarrior, use weekly notes as scratchpad.
+https://www.youtube.com/watch?v=tijnc65soEI
 
+Requirements:
+3 projects:
+- work
+- personal
+- study
+
+Gtd basic system with agenda, inbox, to-do/next, timing, scheduling, loop,
+delegate, etc.
+
+PROS:
+ - declutter git repo and improve personal security
+ - improve task management, with some features
+
+---
+
+- TODO: Interesting. Currently using Vit in a floating Sway window.
+TODO: Looking for annotations, projects/subprojects and filtering features.
+- TODO: https://github.com/obsidian-tasks-group/obsidian-tasks
 - LOOP: iterate over old notes (2-4 notes per day)
+- TODO: LOOP timing integration, parse documents, etc...
+- TODO: fix how I study computer science note
 - TODO: vim keybindings notes/labels
 - TODO: obsidian vim integration default mode (not editing!)
 - TODO: fix notes with :: {xxx}, ?/?? etc.
