Add basic todo items

--- a/weekly/2023-W25.md
+++ b/weekly/2023-W25.md
@@ -55,7 +55,7 @@ when it's required
 - TODO: AVL Tree
 - TODO: KD Tree
 - TODO: skip list
-- TODO: working proxy-server and extension
+- TODO: working proxy-server and extension / mpv integration
 - TODO: work with z-shell note (hotkeys)
 - TODO: monitoring: cert, GitHub info, GitLab info, errors, etc...
 - TODO: check and fix telekasten templates, based on current file
