--- a/weekly/2023-W26.md
+++ b/weekly/2023-W26.md
@@ -5,31 +5,11 @@ tags:
 
 # 26 / 2023
 
-Back to taskwarrior, use weekly notes as scratchpad.
-https://www.youtube.com/watch?v=tijnc65soEI
 
-Requirements:
-3 projects:
-- work
-- personal
-- study
-
-Gtd basic system with agenda, inbox, to-do/next, timing, scheduling, loop,
-delegate, etc.
-
-PROS:
- - declutter git repo and improve personal security
- - improve task management, with some features
-
----
-
-TODO: Note for this week.
-
-- TODO: Interesting. Currently using Vit in a floating Sway window.
-TODO: Looking for annotations, projects/subprojects and filtering features.
-- TODO: https://github.com/obsidian-tasks-group/obsidian-tasks
+- TODO:
+https://git.kernel.org/pub/scm/git/git.git/tree/Documentation/SubmittingPatches?h=v2.36.1#n314
+- TODO: @GTDWithTaskwarrior
 - LOOP: iterate over old notes (2-4 notes per day)
-- TODO: LOOP timing integration, parse documents, etc...
 - TODO: fix how I study computer science note
 - TODO: vim keybindings notes/labels
 - TODO: obsidian vim integration default mode (not editing!)
@@ -38,7 +18,6 @@ TODO: Looking for annotations, projects/subprojects and filtering features.
 - TODO: update quotes to this format:
 > Quote here.\
 > —&thinsp;<cite>Benjamin Franklin</cite>
-
 - NEXT: https://www.youtube.com/watch?v=qgG5Jhi_Els
 - NEXT: https://sbulav.github.io/
 - NEXT: backup instances, 3 - 2 - 1 additional directories and finalize
@@ -92,3 +71,9 @@ when it's required
 - TODO: inbox2synergy
 - TODO: suspend instead poweroff on button press
 - TODO: automatic lock on token remove/suspend, test (have some issues)
+- KILL: https://github.com/obsidian-tasks-group/obsidian-tasks
+- DONE: Back to Taskwarrior, use weekly notes as scratchpad.
+        <https://www.youtube.com/watch?v=tijnc65soEI>
+- DONE: GTD Taskwarrior guide @IndexerrorStringIndexOutOfRange
+- KILL: LOOP timing integration, parse documents, etc..., planned to use
+        taskwarrior
