--- a/weekly/2023-W27.md
+++ b/weekly/2023-W27.md
@@ -7,6 +7,13 @@ tags:
 
 TODO: Note for this week.
 
+- TODO: review https://www.linux.org.ru/forum/admin/17287001?cid=17287236
+- TODO: review Ядро планеты Python. Интерактивный учебник / Хабр https://habr.com/ru/articles/728568/
+- TODO: review Неочевидные сложности при покупке квартиры | Пикабу https://pikabu.ru/story/neochevidnyie_slozhnosti_pri_pokupke_kvartiryi_10457539?cid=278561434&utm_source=linkshare&utm_medium=sharing&utm_campaign=mobile_native_share
+- TODO: review EFISTUB - ArchWiki https://wiki.archlinux.org/title/EFISTUB
+- TODO: review https://supermemo.guru/wiki/20_rules_of_knowledge_formulation
+- TODO: review https://pikabu.ru/story/dyeni_vilnyov_rekomenduet_9_luchshikh_filmov_za_20_let_21_veka_10377624
+- TODO: review Suspend on power button
 - TODO: habit tasks and repeat them
 https://git.kernel.org/pub/scm/git/git.git/tree/Documentation/SubmittingPatches?h=v2.36.1#n314
 - NEXT: https://www.youtube.com/watch?v=qgG5Jhi_Els
